src/rules/snapshots/pg_migration_lint__rules__pgm501__tests__fk_no_index_fires.snap
---
source: src/rules/pgm501.rs
expression: findings
---
- rule_id: PGM501
  severity: Major
  message: "Foreign key on 'child(pid)' has no covering index. Queries joining or filtering on these columns, and referential integrity checks, cause sequential scans on the referencing table."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
