src/rules/snapshots/pg_migration_lint__rules__pgm501__tests__fk_wrong_index_order_fires.snap
---
source: src/rules/pgm501.rs
expression: findings
---
- rule_id: PGM501
  severity: Major
  message: "Foreign key on 'child(a, b)' has no covering index. Sequential scans on the referencing table during deletes/updates on the referenced table will cause performance issues."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
